// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Column And Row Headers 1`] = `
<table
  data-hover="true"
  data-color="accent"
  data-tinted-column-header="true"
  data-tinted-row-header="true"
>
  <caption style="font-size: var(--ds-font-size-3); caption-side: bottom; text-align: center; font-weight: normal; margin-top: var(--ds-size-2);">
    Svarprosent for elevundersøkelsen nasjonalt
  </caption>
  <thead style="text-align: right;">
    <tr>
      <td>
      </td>
      <th scope="col">
        2022–23
      </th>
      <th scope="col">
        2023–24
      </th>
      <th scope="col">
        2024–25
      </th>
    </tr>
  </thead>
  <tbody style="text-align: right; font-feature-settings: &quot;tnum&quot;;">
    <tr>
      <th scope="row">
        8. årstrinn
      </th>
      <td>
        88,5%
      </td>
      <td>
        86,3%
      </td>
      <td>
        85,3%
      </td>
    </tr>
    <tr>
      <th scope="row">
        9. årstrinn
      </th>
      <td>
        88,7%
      </td>
      <td>
        86,3%
      </td>
      <td>
        84,9%
      </td>
    </tr>
    <tr>
      <th scope="row">
        10. årstrinn
      </th>
      <td>
        89,7%
      </td>
      <td>
        87,3%
      </td>
      <td>
        85,7%
      </td>
    </tr>
    <tr>
      <th scope="row">
        Videregående trinn 1
      </th>
      <td>
        84,8%
      </td>
      <td>
        82,8%
      </td>
      <td>
        83,1%
      </td>
    </tr>
    <tr>
      <th scope="row">
        Videregående trinn 2
      </th>
      <td>
        82,5%
      </td>
      <td>
        80,0%
      </td>
      <td>
        80,3%
      </td>
    </tr>
    <tr>
      <th scope="row">
        Videregående trinn 3
      </th>
      <td>
        79,9%
      </td>
      <td>
        75,7%
      </td>
      <td>
        76,9%
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Fixed Table 1`] = `
<div>
  <table
    id="myTable"
    style="table-layout: fixed; margin-bottom: 12px;"
  >
    <caption>
      Tildeling skolebibliotek 2024
    </caption>
    <thead>
      <tr>
        <th>
          Kommune
        </th>
        <th>
          Tildeling
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Bjerkreim kommune
        </td>
        <td>
          330 000
        </td>
      </tr>
      <tr>
        <td>
          Færder kommune
        </td>
        <td>
          750 000
        </td>
      </tr>
      <tr>
        <td>
          Gjøvik kommune
        </td>
        <td>
          150 000
        </td>
      </tr>
      <tr>
        <td>
          Hurdal kommune
        </td>
        <td>
          550 000
        </td>
      </tr>
      <tr>
        <td>
          Marker kommune
        </td>
        <td>
          900 000
        </td>
      </tr>
    </tbody>
  </table>
  <nav aria-label="Sidenavigering">
    <ul>
      <li>
        <button
          aria-disabled="true"
          data-variant="tertiary"
          type="button"
          aria-label="Forrige side"
        >
          Forrige
        </button>
      </li>
      <li>
        <button
          data-variant="primary"
          type="button"
          aria-label="Side 1"
          aria-current="page"
        >
          1
        </button>
      </li>
      <li>
        <button
          data-variant="tertiary"
          type="button"
          aria-label="Side 2"
        >
          2
        </button>
      </li>
      <li>
        <button
          data-variant="tertiary"
          type="button"
          aria-label="Side 3"
        >
          3
        </button>
      </li>
      <li>
        <button
          aria-disabled="false"
          data-variant="tertiary"
          type="button"
          aria-label="Neste side"
        >
          Neste
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Multiple Header Rows 1`] = `
<table
  data-zebra="true"
  data-color="support1"
  data-tinted-column-header="true"
  data-tinted-row-header="true"
>
  <thead>
    <tr>
      <td>
      </td>
      <th
        colspan="5"
        style="text-align: center;"
      >
        Trives du på skolen?
      </th>
    </tr>
    <tr>
      <td>
      </td>
      <th>
        Trives ikke i det hele tatt
      </th>
      <th>
        Trives ikke noe særlig
      </th>
      <th>
        Trives litt
      </th>
      <th>
        Trives godt
      </th>
      <th>
        Trives svært godt
      </th>
    </tr>
  </thead>
  <tbody style="text-align: right;">
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Idrettsfag
      </th>
      <td>
        0.5
      </td>
      <td>
        1.0
      </td>
      <td>
        5.7
      </td>
      <td>
        46.0
      </td>
      <td>
        46.9
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Medier og kommunikasjon
      </th>
      <td>
        1.2
      </td>
      <td>
        1.9
      </td>
      <td>
        11.3
      </td>
      <td>
        49.4
      </td>
      <td>
        36.1
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Musikk, dans og drama
      </th>
      <td>
        -
      </td>
      <td>
        -
      </td>
      <td>
        7.0
      </td>
      <td>
        41.9
      </td>
      <td>
        49.8
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Studiespesialisering
      </th>
      <td>
        1.2
      </td>
      <td>
        1.8
      </td>
      <td>
        8.9
      </td>
      <td>
        49.8
      </td>
      <td>
        38.3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Preview 1`] = `
<table data-color="neutral">
  <caption>
    Sensur FSP6236 Tegnspråk III
  </caption>
  <thead>
    <tr>
      <th>
        <div>
          <input
            aria-label="Velg alle ansatte"
            id="checkbox-select-all"
            type="checkbox"
            value
            name="my-checkbox"
          >
        </div>
      </th>
      <th aria-sort="none">
        <button type="button">
          Navn
        </button>
      </th>
      <th>
        E-post
      </th>
      <th>
        Status
      </th>
      <th>
        Besvarelser
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          <input
            id="checkbox-1"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="1"
            name="my-checkbox"
          >
        </div>
      </td>
      <td>
        Rita Nordmann
      </td>
      <td>
        rita@nordmann.no
      </td>
      <td>
        <span data-color="info">
          I arbeid
        </span>
      </td>
      <td style="text-align: right;">
        19
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            id="checkbox-2"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="2"
            name="my-checkbox"
          >
        </div>
      </td>
      <td>
        Kari Nordmann
      </td>
      <td>
        kari@nordmann.no
      </td>
      <td>
        <span data-color="success">
          Ferdig
        </span>
      </td>
      <td style="text-align: right;">
        0
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            id="checkbox-3"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="3"
            name="my-checkbox"
          >
        </div>
      </td>
      <td>
        Ola Nordmann
      </td>
      <td>
        ola@nordmann.no
      </td>
      <td>
        <span data-color="info">
          I arbeid
        </span>
      </td>
      <td style="text-align: right;">
        14
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            id="checkbox-4"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="4"
            name="my-checkbox"
          >
        </div>
      </td>
      <td>
        Kai Nordmann
      </td>
      <td>
        kai@nordmann.no
      </td>
      <td>
        <span data-color="warning">
          Ikke begynt
        </span>
      </td>
      <td style="text-align: right;">
        35
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            id="checkbox-5"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="5"
            name="my-checkbox"
          >
        </div>
      </td>
      <td>
        Mateo Nordmann
      </td>
      <td>
        mateo@nordmann.no
      </td>
      <td>
        <span data-color="success">
          Ferdig
        </span>
      </td>
      <td style="text-align: right;">
        0
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td colspan="4">
        Totalt gjenstår
      </td>
      <td style="text-align: right;">
        68
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`Sortable 1`] = `
<table>
  <thead>
    <tr>
      <th aria-sort="none">
        <button type="button">
          Navn
        </button>
      </th>
      <th>
        Epost
      </th>
      <th aria-sort="none">
        <button type="button">
          Telefon
        </button>
      </th>
      <th aria-sort="none">
        <button type="button">
          Rolle
        </button>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Rita Nordmann
      </td>
      <td>
        rita@nordmann.no
      </td>
      <td>
        22345678
      </td>
      <td>
        Rektor
      </td>
    </tr>
    <tr>
      <td>
        Kari Nordmann
      </td>
      <td>
        kari@nordmann.no
      </td>
      <td>
        87654321
      </td>
      <td>
        Lektor
      </td>
    </tr>
    <tr>
      <td>
        Ola Nordmann
      </td>
      <td>
        ola@nordmann.no
      </td>
      <td>
        32345678
      </td>
      <td>
        Lektor
      </td>
    </tr>
    <tr>
      <td>
        Kai Nordmann
      </td>
      <td>
        kai@nordmann.no
      </td>
      <td>
        62353278
      </td>
      <td>
        Lektor
      </td>
    </tr>
    <tr>
      <td>
        Mateo Nordmann
      </td>
      <td>
        mateo@nordmann.no
      </td>
      <td>
        12345678
      </td>
      <td>
        Ass. rektor
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Sticky Header 1`] = `
<table
  data-sticky-header="true"
  data-zebra="true"
  tabindex="0"
  data-color="support1"
  data-tinted-column-header="true"
  data-tinted-row-header="true"
>
  <thead>
    <tr>
      <th>
        Fylke
      </th>
      <th>
        Oppholdsareal per barn
      </th>
      <th>
        Åpningstid per dag
      </th>
      <th>
        Kostpenger
      </th>
      <th>
        Foreldrebetaling under makspris
      </th>
      <th>
        Hatt tilsyn
      </th>
    </tr>
  </thead>
  <tbody style="text-align: right;">
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Agder
      </th>
      <td>
        5.9
      </td>
      <td>
        9.4
      </td>
      <td>
        400.6
      </td>
      <td>
        4
      </td>
      <td>
        66
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Akershus
      </th>
      <td>
        5.5
      </td>
      <td>
        9.7
      </td>
      <td>
        419.3
      </td>
      <td>
        1
      </td>
      <td>
        87
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Buskerud
      </th>
      <td>
        5.7
      </td>
      <td>
        9.8
      </td>
      <td>
        377.1
      </td>
      <td>
        9
      </td>
      <td>
        18
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Finnmark
      </th>
      <td>
        7.7
      </td>
      <td>
        9.1
      </td>
      <td>
        357.4
      </td>
      <td>
        44
      </td>
      <td>
        11
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Innlandet
      </th>
      <td>
        6.4
      </td>
      <td>
        9.7
      </td>
      <td>
        380.5
      </td>
      <td>
        5
      </td>
      <td>
        74
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Møre og Romsdal
      </th>
      <td>
        6.4
      </td>
      <td>
        9.7
      </td>
      <td>
        380.5
      </td>
      <td>
        5
      </td>
      <td>
        46
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`With Border 1`] = `
<div style="display: grid; gap: 1rem;">
  <table
    data-border="true"
    data-color="support2"
    data-tinted-column-header="true"
    data-tinted-row-header="true"
  >
    <thead>
      <tr>
        <th>
          Uke
        </th>
        <th>
          Datoer
        </th>
        <th>
          Hva
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          31
        </td>
        <td>
          1. august
        </td>
        <td>
          Påmelding til nasjonale prøver starter
        </td>
      </tr>
      <tr>
        <td>
          36-39
        </td>
        <td>
          1. september - 26. september
        </td>
        <td>
          Gjennomføringsuker for nasjonale prøver 5.trinn i
          <ul>
            <li>
              Engelsk
            </li>
            <li>
              Lesing
            </li>
            <li>
              Regning
            </li>
          </ul>
        </td>
      </tr>
      <tr>
        <td>
          39
        </td>
        <td>
          26. september
        </td>
        <td>
          Frist for registrering av fritatt og ikke deltatt for alle prøvene
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`With Form Elements 1`] = `
<table>
  <thead>
    <tr>
      <th>
        <div>
          <input
            aria-label="Select all"
            id="components-table--with-form-elements-selectAll"
            type="checkbox"
            value
            name="components-table--with-form-elements-checkboxGroup"
          >
        </div>
      </th>
      <th>
        #
      </th>
      <th>
        Spørsmål
      </th>
      <th>
        Alternativ 1
      </th>
      <th>
        Alternativ 2
      </th>
    </tr>
  </thead>
  <tbody style="place-content: start center; align-items: center;">
    <tr>
      <td>
        <div>
          <input
            aria-label="Check 1"
            id="components-table--with-form-elements-select1"
            type="checkbox"
            value="1"
            name="components-table--with-form-elements-checkboxGroup"
          >
        </div>
      </td>
      <td>
        1.
      </td>
      <td>
        <div data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-1"
              id="components-table--with-form-elements-textfield1-1"
              type="text"
              value="Trives du på skolen?"
            >
          </div>
        </div>
      </td>
      <td>
        <div data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-2"
              id="components-table--with-form-elements-textfield1-2"
              type="text"
              value="Trives ikke noe særlig"
            >
          </div>
        </div>
      </td>
      <td>
        <div data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-3"
              id="components-table--with-form-elements-textfield1-3"
              type="text"
              value="Trives godt"
            >
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            aria-label="Check 1"
            id="components-table--with-form-elements-select1"
            type="checkbox"
            value="2"
            checked
            name="components-table--with-form-elements-checkboxGroup"
          >
        </div>
      </td>
      <td>
        2.
      </td>
      <td>
        <div
          data-size="sm"
          style="width: 250px;"
        >
          <div>
            <input
              aria-label="Textfield 1-1"
              id="components-table--with-form-elements-textfield1-1"
              type="text"
              value="Har du opplevd mobbing?"
            >
          </div>
        </div>
      </td>
      <td>
        <div data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-2"
              id="components-table--with-form-elements-textfield1-2"
              type="text"
              value="Sjelden"
            >
          </div>
        </div>
      </td>
      <td>
        <div data-size="sm">
          <div>
            <input
              cols="3"
              aria-label="Textfield 1-3"
              id="components-table--with-form-elements-textfield1-3"
              type="text"
              value="Ofte"
            >
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
